--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>about me</title>
   </head>
   <body>
 
-    <h1>hello world </h1>
-
+    <h1>amera mohammed </h1>
+<img src="butterfly.jpg" alt="butterfly" width="100" height="100">
+<p>my name is amera mohammed i am 19 years old </p>
+<a href="https://www.google.com">google</a>
+<h2>my hobbies</h2>
+<ul>
+    <li>reading</li>
+    <li>writing</li>
+    <li>cooking</li>
+</ul>
   </body>
 </html>
